# empty_cpp_template

./: .clang-format  CMakeLists.txt  format.py
doc/: CMakeLists.txt  Doxyfile.in  README.txt
doc/include/: mainpage.md
example/: CMakeLists.txt  main.cpp
src/: A.hpp  A.ipp  B.hpp  B.ipp  CMakeLists.txt  expl_inst.cpp  expl_inst.hpp
test/: CMakeLists.txt  demo_test.cpp  unittests.cpp
